# learn-llvm-passes

./: CMakeLists.txt  LICENSE  README.md
source/: CMakeLists.txt
source/analysis/reachingintegervalues/: CMakeLists.txt  reachingintegervalues.cpp  reachingintegervalues.h
source/countinstructions/: CMakeLists.txt  CountInstructions.cpp  CountInstructions.h  README.md
source/elementary/countinstructions/: CountInstructions.cpp
source/elementary/functionvisitor/: CMakeLists.txt  FunctionVisitor.cpp  FunctionVisitor.h  README.md
source/elementary/hellopass/: HelloPass.cpp  HelloPass.h
source/functionvisitor/: FunctionVisitor.cpp
source/hellopass/: HelloPass.h  README.md
source/helloworld/: CMakeLists.txt  HelloPass.cpp
source/transformations/MBAAdd/: CMakeLists.txt  MBAAdd.cpp  MBAAdd.h
tests/: helloWorld.ll
tests/MBAtest/: input_for_mba.ll  output_from_mba.ll
tests/calculator/: calc.cpp  calc.ll
tests/helloWorld/: helloWorld.cpp
